--- a/files/galerij.html
+++ b/files/galerij.html
@@ -20,7 +20,7 @@
     <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="#galerij">Multimedia</a></li>
-        <li><a href="../files/info.html">Reserveren</a></li>
+        <li><a href="info.html">Reserveren</a></li>
         <li id="contact"><img src="../pics/whatsapp.png" onclick="contactFunctie()" title="Whatsapp" alt="Whatsapp icon"></li>
     </ul>
     </nav>
