--- a/files/info.html
+++ b/files/info.html
@@ -18,9 +18,9 @@
     </header>
     <nav>
     <ul>
-        <li><a href="../files/index.html">Home</a></li>
-        <li><a href="../files/galerij.html">Multimedia</a></li>
-        <li><a href="../files/info.html">Reserveren</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="galerij.html">Multimedia</a></li>
+        <li><a href="info.html">Reserveren</a></li>
         <li id="contact"><img src="../pics/whatsapp.png" onclick="contactFunctie()" title="Whatsappp" alt="Whatsapp icon"></li>
     </ul>
     </nav>
