--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <nav>
     <ul>
-        <li><a href="#home"style="background:lightblue">Home</a></li>
+        <li><a href="#home"style="background:LightSkyBlue">Home</a></li>
         <li><a href="files/galerij.html">Multimedia</a></li>
         <li><a href="files/info.html">Reserveren</a></li>
         <li id="contact"><img src="pics/whatsapp.png" onclick="contactFunctie()" title="Whatsapp" alt="Whatsapp icon"></li>
