--- a/files/galerij.html
+++ b/files/galerij.html
@@ -19,7 +19,7 @@
     <nav>
     <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="#galerij">Multimedia</a></li>
+        <li><a href="#galerij" style="background:DodgerBlue">Multimedia</a></li>
         <li><a href="info.html">Reserveren</a></li>
         <li id="contact"><img src="../pics/whatsapp.png" onclick="contactFunctie()" title="Whatsapp" alt="Whatsapp icon"></li>
     </ul>
