--- a/files/info.html
+++ b/files/info.html
@@ -20,7 +20,7 @@
     <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="galerij.html">Multimedia</a></li>
-        <li><a href="#info">Reserveren</a></li>
+        <li><a href="#info" style="background:DodgerBlue">Reserveren</a></li>
         <li id="contact"><img src="../pics/whatsapp.png" onclick="contactFunctie()" title="Whatsappp" alt="Whatsapp icon"></li>
     </ul>
     </nav>
